# document-composer

./: .flake8  README.md  pyproject.toml
src/document_composer/api/: composer.py
src/document_composer/gui/basic/: dc_button.py  dc_check_box.py  dc_combo_box.py  dc_entry.py  dc_font.py  dc_frame.py  dc_label.py  dc_screen.py  dc_textbox.py
src/document_composer/resources/: manual.html
