[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "document-composer"
version = "0.1.0"
description = "document-composer is a Python module that combines multiple document files and outputs them as a single document file."
readme = "README.md"
license = { file = "LICENSE.txt" }
requires-python = ">=3.14.4"
dependencies = ["customtkinter>=5.2.2", "PyYAML>=6.0.3", "python-docx>=1.2.0"]

[project.optional-dependencies]
dev = [
  "flake8-docstrings>=1.7.0",
  "mypy>=1.20.1",
  "types-pyyaml==6.0.12.20260408",
]
release = ["pyinstaller>=6.19.0", "pip-licenses>=5.5.5", "pipdeptree>=2.35.1"]

[project.scripts]
document_composer = "document_composer.main:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
document_composer = [
  "config.yml",
  "logging.yml",
  "resources/*.ico",
  "resources/*.png",
]

[tool.mypy]
python_version = "3.14"
strict = true

warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
no_implicit_optional = true
ignore_missing_imports = true
